--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.6",
     "bcrypt": "^5.0.1",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
